Avoid type error

--- a/src/content/videos/36-trail-cam-2024-12-17.md
+++ b/src/content/videos/36-trail-cam-2024-12-17.md
@@ -9,7 +9,7 @@ platform: X
 video-tags:
   - nature
 source-link: https://x.com/Trail_Cams/status/1869071448079565140
-tweet-text:
+tweet-text: trailcam (@Trail_Cams) December 17, 2024
 attribution-link: https://x.com/Trail_Cams
 ---
 
